--- a/ant.properties
+++ b/ant.properties
@@ -7,4 +7,6 @@
 # location of the SDK. This is only used by Ant
 # For customization when using a Version Control System, please read the
 # header note.
-sdk.dir=c:\\Program Files (x86)\\Android\\android-sdk
+# sdk.dir=c:\\Program Files (x86)\\Android\\android-sdk
+sdk.dir=D:\\My\\Android\\sdk
+source.dir=src.release
