--- a/ant.properties
+++ b/ant.properties
@@ -8,5 +8,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 # sdk.dir=c:\\Program Files (x86)\\Android\\android-sdk
-sdk.dir=C:\\my\\Android\\sdk
+sdk.dir=D:\\my\\Android\\sdk
 source.dir=src.release
